tooling/nargo_cli/tests/snapshots/execution_success/regression_7323/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "1587032825221001634": {
        "error_kind": "fmtstring",
        "length": 28,
        "item_types": []
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _6",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) -1 ]], outputs: [_1]",
    "EXPR [ (1, _0, _1) (-1, _1) (1, _2) -1 ]",
    "EXPR [ (1, _0, _2) (-1, _2) 0 ]",
    "EXPR [ (-1, _2) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) -2 ]], outputs: [_3]",
    "EXPR [ (1, _0, _3) (-2, _3) (1, _4) -1 ]",
    "EXPR [ (1, _0, _4) (-2, _4) 0 ]",
    "EXPR [ (-1, _4) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) -3 ]], outputs: [_5]",
    "EXPR [ (1, _0, _5) (-3, _5) (1, _6) -1 ]",
    "EXPR [ (1, _0, _6) (-3, _6) 0 ]",
    "EXPR [ (-1, _6) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
