tooling/nargo_cli/tests/snapshots/execution_success/regression_7323/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "1587032825221001634": {
        "error_kind": "fmtstring",
        "length": 28,
        "item_types": []
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _6",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) -1 ]], outputs: [_1]",
    "EXPR [ (1, _0, _1) (-1, _1) (1, _2) -1 ]",
    "EXPR [ (1, _0, _2) (-1, _2) 0 ]",
    "EXPR [ (-1, _2) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) -2 ]], outputs: [_3]",
    "EXPR [ (1, _0, _3) (-2, _3) (1, _4) -1 ]",
    "EXPR [ (1, _0, _4) (-2, _4) 0 ]",
    "EXPR [ (-1, _4) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) -3 ]], outputs: [_5]",
    "EXPR [ (1, _0, _5) (-3, _5) (1, _6) -1 ]",
    "EXPR [ (1, _0, _6) (-3, _6) 0 ]",
    "EXPR [ (-1, _6) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "tZPBboQgEIbfZc4cFBTBV2kag4obEoKGhU0as+9epGLtgWS7m738Iwwf/jDMCqPs/aVTZpqv0H6s0Fultbp0eh6EU7MJs+sdQRp2zkoZpuCUD9QirDQOWuO1RnAT2sdF10WYGJ2wIVsgkGYMMWw4KS23rzv6pYs8immzw5iyA68f51mVeMZf4gnGOZ7k+YbvOKMHXZFH/05IOj2p8BPuT3xT53j6Nvc8FZ7w+hn3B1/hbO35/91/hpEYlP3z1qGAtkRQRsVRSViOoIr1raPSqE3YGgGLN8ejlsVP2Ojtkd+EVaLXcm+iyZvh1FPua0mZ1HWLnQc5eis3TzEXXH4D",
  "file_map": {
    "43": {
      "source": "pub fn panic<T, U, let N: u32>(message: fmtstr<N, T>) -> U {\n    assert(false, message);\n    crate::mem::zeroed()\n}\n",
      "path": "std/panic.nr"
    },
    "50": {
      "source": "// This program lead to panics previously due to the compiler lowering it to multiple blocks\n// which all jumped to the same end block. It runs now due to the compiler lowering to the\n// equivalent of a nested series of if-else instead.\nfn main(x: Field) {\n    match x {\n        1 => panic(f\"Branch 1 should not be taken\"),\n        2 => panic(f\"Branch 2 should not be taken\"),\n        3 => panic(f\"Branch 3 should not be taken\"),\n        _ => (),\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_invert"
  ]
}
