tooling/nargo_cli/tests/snapshots/execution_success/regression_7323/execute__tests__force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "16078247100671166886": {
        "error_kind": "fmtstring",
        "length": 28,
        "item_types": []
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+2YWXKbQBCGZyxAQhK2LCfWCbI92AVa8ZsfchEiWecgZ0wOlCg1DU1nZBvR7aWqqVKxzPD1P81sv6ypD+vOAbk3njr37px2OzJGVuoV+tgBde7cRezuz1B5j7GxMYnLyc/T5Sr2tI9R/yJ2TMn8AFOAn/Yd53tZ82lbDkfi7nEfgncGf39jU18n7jom70h8W8Hcp1ce/RBr5Nr61Tbbeobyw6Qjw207HOEjunw5sWxalnPgByL8TcUPRfjrajxFMvwH4Pdl+NV8M5Dh58CPRfjzFPhDmf5T5Wckk5898Mcy+qs5LZHRvwX+uQx/CfwLmfxU/ImM/mr+uZThV993KsP/AfwrxDeGb00E/gcZfjU/f0R8zjU9NM219Lc7H9aDT+6a7rkY2zeHNl07nm8tp+s81P2JtH6T17roovUWab1B11/Ifgmz+MbBYpF48mJJzq5JO3hiZztL4hnT3L/TvA6N6B4/syQe6KH5gT0j5G7m0TrxlNG95swTZ+aJ42MFjKyQkRUxsvqMrAEjK2Zk2Teqa8jI4sz9iJE1ZmQljKxzRhZnn+Ac25zf8YKRxZmvCSPr8o22kTP3nOvQlJHFmXs6hmD+x+s59iTgH+iesnRn2f/2sgfY44A+gzT4/oPijG1JPMg3fobjJx49oHt4pOz+RK27/Txb5/luud6s8rtibQkftNJndA8Yeer79pq+/8sYc72F9atX1vwI5fVwBKgsJGUhKgONh3X/1jb1R0L6n5N/HH/iKcNeus23nJpmX8Pj8QW93Fy9XC3Iknig59j4Ui/39FqlXk69nHq5diz1cu1Y6uVer43q5bqNIZj/23q5X+6sXk693Cn6Sa7Vy5l37+Uy9XK1IEvigZ5j40u93NNrlXo59XLq5dqx1Mu1Y6mXe702qpfrNoZg/m/r5T67C/Vy6uVO0U9yrV7OyHu5kann3qDkz8MmT1MYF/AdQ9PsT4bED0n9GwfA+z9juo+X/abI9otiX6yK3W65LaaEj/M5Qs/7ZV3eI1r/6XfX0A8HuD4pi8v/2w9xhu4+QHEwC3SEpH7uALAORugdeH/iiR+R+A3dnmd43qCsnucZ7n8Z6n9/APmZo2hNOQAA",
  "debug_symbols": "tdrNahphGMXxe5m1i3k/no/XWyklmGQSBNFgTKGE3Hu1tUXSbP6LswlMmHMUfxwYx3mfHpf7t+e77f7p8Dqtv71Pu8PD5rQ97M9H7x+r6f643e22z3e3/57my58Wv89/fdnsL4evp83xNK1r9tW07B+ndav1nH/a7pZpbfPH99XUkiZ6+SrRWvxNhH1OVJxwnAicSJwYNGEzTuBP1/Cnaw0nOk4YTmBzw+aGzQ2bOzZ3bO7Y3LG5Y3PH5o7NHZs7NndsHtg8sHlg88Dmgc0Dmwc2D2we2DyweWLzxOaJzRObJzZPbJ7YPLF5YvPE5gObD2w+sPnA5gObD2w+sPnA5gObD2xe5plHCo9UHmk80nnEeMR5JHjka/wxXyO95m1k9d+pUa9nRvw7sbc/3UPXXWZhdxF2V2F3E3Z3YbcJu13YHcJu4S6LcJdVuMsq3GUV7rIKd1mFu6zCXVbhLqtwl3XQW32lzTxSeKTySOORziPGI84jwSPJI1y/c/3O9TvX71y/c/3O9TvX71y/c/3O9Y3rG9c3rm9c37i+cX3j+sb1jesb13eu71zfub5zfef6zvWd6zvXd67vXD+4fnD94PrB9YPrB9cPrh9cP7h+cP3k+sn1k+sn10+un1w/uX5y/eT6yfUH14c3udG3Fng7nHU3YXcXdpuw24XdIexOYfeQdVf46wLrLsLuKuxuwu4u7DZhtwu7Q9idwm7hLotwl/CSlHWbsNuF3SHsTmH30HXDC3HWXYTdVdjdhN3CXaZwlyncZQp3mcJdpnCXQ7jLIdzlEO5yqHb5cT76sTluN/e75foA/NPb/uHmefjTz5fl06PxL8fDw/L4dlwuD8nfPB9/fo9trqtW6uW6/sJYh6/aXM4vc36pXw==",
  "file_map": {
    "43": {
      "source": "pub fn panic<T, U, let N: u32>(message: fmtstr<N, T>) -> U {\n    assert(false, message);\n    crate::mem::zeroed()\n}\n",
      "path": "std/panic.nr"
    },
    "50": {
      "source": "// This program lead to panics previously due to the compiler lowering it to multiple blocks\n// which all jumped to the same end block. It runs now due to the compiler lowering to the\n// equivalent of a nested series of if-else instead.\nfn main(x: Field) {\n    match x {\n        1 => panic(f\"Branch 1 should not be taken\"),\n        2 => panic(f\"Branch 2 should not be taken\"),\n        3 => panic(f\"Branch 3 should not be taken\"),\n        _ => (),\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
